--- a/moncv/ubo-resume.html
+++ b/moncv/ubo-resume.html
@@ -19,7 +19,7 @@
  			<div class="coord">
  				<h1 class="nom">Ayoub SADIQ </h1>
  				<h2> Etudiant 2ème année master DOSI </h2>
- 				 <img src="photo2.png" width="100" length="200"/>
+ 				 <img src="photo.png" width="100" length="200"/>
  				<p> 4 Rue des archives, RES. UNIV. Kergoat </br> 29200, Brest, France </br>
  				 23 ans, Marocain </br>
  				 ayoub.saadiq@gmail.com </br>
@@ -31,7 +31,8 @@
 
 
  			
- 			</br><h4>FORMATIONS</h4>
+ 			</br><h4>FORMATIONS <hr color="#272064" width="99%"></h4>
+ 			
 
  			<section>
  			<article>	
@@ -60,7 +61,7 @@
 
 
 		
-		</br><h4>COMPÉTENCES</h4>
+		</br><h4>COMPÉTENCES <hr color="#272064" width="99%"></h4>
 
 
 			<section>
@@ -83,7 +84,7 @@
 			</section>
 
 
-		</br><h4>PROJET RÉALISÉS</h4>
+		</br><h4>PROJET RÉALISÉS <hr color="#272064" width="99%"></h4>
 
 			<section>
 				<article>
@@ -114,7 +115,7 @@
 
 
 
-		</br><h4>COMPÉTENCES COMPLÉMENTAIRES</h4>
+		</br><h4>COMPÉTENCES COMPLÉMENTAIRES <hr color="#272064" width="99%"></h4>
 
 			<section>
 				<article>
@@ -141,9 +142,9 @@
 				<article>
 					<footer>
 						<p> Cette page a été réalisé par SADIQ Ayoub, étudiant en 2ème année de master DOSI à l'Université de Bretagne Occidentale à Brest </p>
-						 <a href="http://www.facebook.com" >  Facebook : </a> </br>
-						 <a href="http://www.LinkedIn.com" >  LinkedIn :</a></br>
-						 <a href="http://www.GitHub.com" >  GitHub : </a> </br>
+						 <a href="http://www.facebook.com" >  Facebook  </a> </br>
+						 <a href="http://www.LinkedIn.com" >  LinkedIn </a></br>
+						 <a href="http://www.GitHub.com" >  GitHub  </a> </br>
 					</footer>
 				</article>
 			</section>
