--- a/moncv/ubo-resume.html
+++ b/moncv/ubo-resume.html
@@ -9,17 +9,25 @@
 		<meta name="keywords" content="web,developer,resume" />
 		<meta name="author" content="Mon nom">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-		<link rel="stylesheet" type="text/css" href="ubo-resume.css"> 
+
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/fontawesome.min.css"> 
+
+		<link rel="stylesheet" type="text/css" href="css/ubo-resume.css"> 
+		<link rel="stylesheet" type="text/css" href="css/resume.css"> 
+<script src="//use.edgefonts.net/brush-script-std;cookie.js"></script>
+
 	</head> 
 
 	<body>
- 		<div class="wrapper">
+ 		<div id="wrapper">
  			<div class="coord">
+ 				<img class="photo" src="photo.png" width="150" length="200"/>
+			<i class="icon-camera-retro">
  				<h1 class="nom">Ayoub SADIQ </h1>
+ 			</i>
+ 				 				 				 
+
  				<h2> Etudiant 2ème année master DOSI </h2>
- 				 <img src="photo.png" width="100" length="200"/>
  				<p> 4 Rue des archives, RES. UNIV. Kergoat </br> 29200, Brest, France </br>
  				 23 ans, Marocain </br>
  				 ayoub.saadiq@gmail.com </br>
