Ajout du css responsive

--- a/moncv/ubo-resume.html
+++ b/moncv/ubo-resume.html
@@ -14,6 +14,8 @@
 
 		<link rel="stylesheet" type="text/css" href="css/ubo-resume.css"> 
 		<link rel="stylesheet" type="text/css" href="css/resume.css"> 
+		<link rel="stylesheet" type="text/css" href="css/responsive.css"> 
+
 <script src="//use.edgefonts.net/brush-script-std;cookie.js"></script>
 
 	</head> 
