--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -29,7 +29,7 @@
  			</i>
  				 				 				 
 
- 				<h2 itemprop="jobTitle"> Etudiant 2ème année master DOSI </h2>
+ 				<h2 itemprop="jobTitle"> Ingénieur en Développement lOgiciel des Systèmes d'Informations </h2>
  				<span itemprop ="address"> 4 Rue des archives, RES. UNIV. Kergoat </br> 29200, Brest, France </br></span>
  				<span> 23 ans,</span><span itemprop="nationality"> Marocain </span></br>
  				<span itemprop="email"> ayoub.saadiq@gmail.com</span> </br>
